<resources>
    <string name="app_name">CashCraft</string>

    <!--main-->
    <string name="welcome">Welcome to Finance Tracker</string>
    <string name="balance1">Current Balance</string>
    <string name="balance2">$0.00</string>
    <string name="add_ex">➖ Add Expense</string>
    <string name="add_in">➕ Add Income</string>
    <string name="view_tr">📄 View Transactions</string>
    <string name="recent_tr">Recent Transactions</string>
    <string name="category1">Groceries</string>
    <string name="price1">-$40.00</string>
    <string name="overview">Expense vs Income Overview</string>
    <string name="chart">Overview chart</string>

    <!--Add Transaction-->
    <string name="add_tr">Add Transaction</string>
    <string name="amount">Amount</string>
    <string name="desc">Description</string>
    <string name="date">Date :</string>
    <string name="save">Save Transaction</string>
    <string name="exp">Expense</string>
    <string name="inc">Income</string>
    <string name="transaction_title">Transaction Title</string>
    <string name="_0_00">₹0.00</string>
    <string name="category">Category:</string>
    <string name="date1">Date:</string>
    <string name="notes">Notes:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!--single Transaction-->

    <!--login screen-->
    <string name="login_text1">Welcome Back!</string>
    <string name="login_text2">Log in to manage your tasks and \nkeep your goals within reach.</string>
    <string name="login_user">Username</string>
    <string name="login_pw">Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="login_text3">- OR -</string>
    <string name="login_btn_google">LOGIN WITH GOOGLE</string>
    <string name="login_btn_FB">LOGIN WITH FACEBOOK</string>
    <string name="login_text4">No account yet?  Register</string>

    <!--Register Screen-->
    <string name="register_text1">Create Account</string>
    <string name="register_name">fullname</string>
    <string name="register_un">username</string>
    <string name="register_mail">E-mail</string>
    <string name="register_pw">password</string>
    <string name="register_re_pw">re-enter password</string>
    <string name="register_text2">Agree with <b>Terms &amp; Conditions</b></string>
    <string name="register_text3">Already have an account?</string>
    <string name="register_text4">Login</string>

    <string name="no_transactions">transactions</string>
    <string name="add_transaction">Add Transaction</string>
<!--    main-->
    <string name="total_exp">Total Expense</string>
    <string name="total_inc">Total Income</string>
    <string name="cat_spend">Expense</string>
    <string name="tr_title">Transaction Title</string>
    <string name="am">₹0.00</string>
    <string name="cat">Category: Food</string>
    <string name="tr_date">Date: 2023-04-13</string>
    <string name="tr_note">Notes: Grocery shopping</string>
    <string name="one_edit">Edit</string>
    <string name="one_delete">Delete</string>
    <string name="one_cancel">Cancel</string>
</resources>