<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:orientation="vertical"
android:padding="20dp"
android:gravity="center">

    <LinearLayout
        android:layout_width="323dp"
        android:layout_height="731dp"
        android:background="@color/login_bg"
        android:orientation="vertical">
        <!-- Welcome Back Text -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginTop="15dp"
            android:text="@string/login_text1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:gravity="center"
            android:text="@string/login_text2"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginBottom="12dp">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="username"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/user"
                android:drawablePadding="10dp"
                android:hint="@string/login_user"
                android:inputType="text"
                android:padding="12dp"
                android:textColorHint="#666666"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#666666" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="password"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/show_pw"
                android:drawablePadding="10dp"
                android:hint="@string/login_pw"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHint="#666666"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#666666" />
        </RelativeLayout>

        <!-- Login Button -->

        <!-- OR Text -->

        <!-- Login with Google -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="292dp"
            android:layout_height="57dp"
            android:layout_gravity="left"
            android:layout_marginStart="16sp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#1A73E8"
            android:text="@string/login_btn"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:layout_width="62dp"
            android:layout_height="30dp"
            android:layout_marginStart="120sp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/login_text3"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Login with Facebook -->

        <Button
            android:id="@+id/btnGoogleLogin"
            android:layout_width="292dp"
            android:layout_height="57dp"
            android:layout_marginStart="16sp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#1540C2"
            android:text="@string/login_btn_google"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnFacebookLogin"
            android:layout_width="292dp"
            android:layout_height="57dp"
            android:layout_marginStart="16sp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#1540C2"
            android:gravity="center"
            android:text="@string/login_btn_FB"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <!-- No Account? Register -->
        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60sp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/login_text4"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>

