<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/add_tr"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <!-- Income or Expense Toggle -->
                <RadioGroup
                    android:id="@+id/rgTransactionType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbIncome"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:buttonTint="@color/green"
                        android:text="@string/inc"
                        android:textColor="@color/green"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rbExpense"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:buttonTint="@color/red"
                        android:text="@string/exp"
                        android:textColor="@color/red"
                        android:textSize="18sp" />
                </RadioGroup>

                <!-- Amount -->
                <EditText
                    android:id="@+id/etAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="amount"
                    android:background="@drawable/bg_card"
                    android:drawableStart="@drawable/ic_money"
                    android:drawablePadding="10dp"
                    android:hint="@string/amount"
                    android:inputType="numberDecimal"
                    android:padding="12dp"
                    android:textSize="18sp" />

                <!-- Description -->
                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="description"
                    android:background="@drawable/bg_card"
                    android:drawableStart="@drawable/ic_note"
                    android:drawablePadding="10dp"
                    android:hint="@string/desc"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textSize="18sp" />

                <!-- Category -->
                <Spinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="12dp" />

                <!-- Date Picker Trigger -->
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/bg_card"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:drawablePadding="5dp"
                    android:padding="12dp"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <!-- Save Button -->
                <Button
                    android:id="@+id/btnSaveTransaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>

<!--
                    -->